# Exasim

./: .gitignore
.github/workflows/: exasim-ci.yml
backend/Common/: common.h  pblas.h
backend/Discretization/: discretization.cpp  matvec.cpp  residual.cpp  uequation.cpp  wequation.cpp
backend/Main/: exasim.hpp  libexasim.cpp  libexasimheader.h  main.cpp
backend/Model/: HdgFbou.cpp  HdgFbouonly.cpp  HdgFlux.cpp  HdgSource.cpp  KokkosDrivers.cpp  KokkosFbou.cpp  KokkosFlux.cpp  KokkosInitu.cpp  KokkosQoIboundary.cpp  KokkosSource.cpp  KokkosTdfunc.cpp  KokkosUbou.cpp  KokkosVisScalars.cpp  KokkosVisVectors.cpp  ModelDrivers.cpp  SymbolicScalarsVectors.cpp  SymbolicScalarsVectors.hpp  cpuInitu.cpp  modeltemplate.hpp
backend/Preprocessing/: CMakeLists.txt  domaindecomposition.cpp  helpersexasim.cpp  makemaster.cpp  parmetisexasim.cpp  preprocessing.cpp  readmesh.cpp  structs.hpp  test.cpp  writebinaryfiles.cpp
backend/Solution/: solution.cpp  updatesolution.cpp
examples/NavierStokes/nshtmach8/: pdeapp_ns.m  pdemodel_ns.m
examples/headeronly/Poission3D/: CMakeLists.txt  main.cpp  notes
frontends/Matlab/Preprocessing/: writeinputfile.m
install/: CMakeLists.txt  setpath.m
install/cmake/: exasimConfig.cmake.in  exasim_header_config.hpp.in
metis/preprocessing/: comparestructs.cpp  domaindecomposition.cpp  helpers.cpp  parmetisexasim.cpp  preprocess.cpp  readmesh.cpp  readpdeapp.cpp  structs.hpp  writebinaryfiles.cpp
